Make changes for Java 8 compatibility